; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/hisilicon/hns/extr_hns_dsaf_gmac.c_hns_gmac_config_max_frame_length.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/hisilicon/hns/extr_hns_dsaf_gmac.c_hns_gmac_config_max_frame_length.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mac_driver = type { i32 }

@GMAC_MAX_FRM_SIZE_REG = common dso_local global i32 0, align 4
@GMAC_MAX_FRM_SIZE_M = common dso_local global i32 0, align 4
@GMAC_MAX_FRM_SIZE_S = common dso_local global i32 0, align 4
@GAMC_RX_MAX_FRAME = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @hns_gmac_config_max_frame_length to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hns_gmac_config_max_frame_length(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.mac_driver*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.mac_driver*
  store %struct.mac_driver* %7, %struct.mac_driver** %5, align 8
  %8 = load %struct.mac_driver*, %struct.mac_driver** %5, align 8
  %9 = load i32, i32* @GMAC_MAX_FRM_SIZE_REG, align 4
  %10 = load i32, i32* @GMAC_MAX_FRM_SIZE_M, align 4
  %11 = load i32, i32* @GMAC_MAX_FRM_SIZE_S, align 4
  %12 = load i32, i32* %4, align 4
  %13 = call i32 @dsaf_set_dev_field(%struct.mac_driver* %8, i32 %9, i32 %10, i32 %11, i32 %12)
  %14 = load %struct.mac_driver*, %struct.mac_driver** %5, align 8
  %15 = load i32, i32* @GAMC_RX_MAX_FRAME, align 4
  %16 = load i32, i32* @GMAC_MAX_FRM_SIZE_M, align 4
  %17 = load i32, i32* @GMAC_MAX_FRM_SIZE_S, align 4
  %18 = load i32, i32* %4, align 4
  %19 = call i32 @dsaf_set_dev_field(%struct.mac_driver* %14, i32 %15, i32 %16, i32 %17, i32 %18)
  ret void
}

declare dso_local i32 @dsaf_set_dev_field(%struct.mac_driver*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
